<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>

    <string name="app_name">Foodbook</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_bar_text">foodbook</string>
    <string name="myFridgeTitleBar">My Fridge</string>
    <string name="add">Add</string>
    <string name="see_what_i_can_make">See what I can make</string>
    <string name="recipe_details_title_bar">Recipe Details</string>
    <string name="local_recipe_book_title">The Recipe Book</string>
    <string name="write_a_new_recipe">Write a new recipe</string>
    <string name="food_name">Food name here</string>
    <string name="author_name">Author name here</string>
    <string name="author">Author</string>
    <string name="desc">Description</string>
    <string name="desc_here">Description of the food here. this could be more than one line.</string>
    <string name="ingredients_label">Ingredients (Separated by comma)</string>
    <string name="ingredients_here">ingredient1 (230g)\ningredient2 (3 tea spoons)</string>
    <string name="category">Category (Separated by comma)</string>
    <string name="category_here">Simple\nItalian\nPizza</string>
    <string name="instructions">Instructions</string>
    <string name="recipeDetails_instructions">1. Preheat your oven at whatever degree Celcius\n2. do something...\n3. Do something else...\n4. blahblah</string>
    <string name="share">Share with friends</string>
    <string name="otherButtons">Other buttons here...</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="manage_pic">Manage\nPicture</string>
    <string name="emptyString"/>
    <string name="separate_by_comma">Separate by comma</string>
    <string name="save">Save</string>
    <string name="new_recipe">New Recipe</string>
    <string name="edit_recipe">Edit</string>
    <string name="online_search">Online Search</string>
    <string name="search_by_recipe_name">Search by recipe name</string>
    <string name="search">Search</string>
    <string name="seasrch_by_ingredients">Search by ingredients</string>
    <string name="search_result">Search Results</string>
    <string name="all">All</string>
    <string name="mine">Mine</string>
    <string name="downloads">Downloads</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="delete_recipe">Delete</string>
    <string name="download">Download</string>
    <string name="publish">Publish</string>
    <string name="photo_manager">Photo Manger</string>
    <string name="bogo_gen">Bogo</string>
    <string name="photo">Photo</string>
    <string name="Previous">Previous</string>
    <string name="next">Next</string>

</resources>
