<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp" >

        <QuickContactBadge
            android:id="@+id/editIcon"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_margin="16dp"
            android:src="@color/fb_white" />

        <EditText
            android:id="@+id/editRecipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@+id/editIcon"
            android:ems="10"
            android:hint="@string/recipe_title" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editRecipeDesc"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:hint="@string/desc"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editRecipeCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/category"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editRecipeIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingredients_label"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editRecipeInst"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:hint="@string/instructions"
                android:inputType="textMultiLine" />

            <Button
              	
                android:id="@+id/editRecipeSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="saveButtonClicked"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>