<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipeBookLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/recipeBookAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <Button
            android:id="@+id/recipeBookMineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine" />

        <Button
            android:id="@+id/recipeBookDownloadsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downloads" />
    </LinearLayout>

    <ListView
        android:id="@+id/recipeBookList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="#FF0000"
        android:textSize="50sp" >

    </ListView>

</LinearLayout>